recursion.lessons.recursion.tree.Tree.scala.error
Tree:4: error: '(' expected but identifier found.
if steps==0 {}
   ^Tree:13: error: illegal start of simple expression
}
^